[package]
name = "cancellable"
version = "0.1.0"
authors = ["Kamil Rusin <kamil.jakub.rusin@gmail.com>"]
edition = "2021"
description = "A Rust library providing a generic cancellable utility."
readme = "README.md"
homepage = "https://github.com/nathiss/cancellable"
repository = "https://github.com/nathiss/cancellable"
license = "MIT"
keywords = ["tokio", "service", "cancellable"]
categories = ["asynchronous"]
include = ["/src", "LICENSE.txt"]

[dependencies]
async-trait = "0.1.71"
log = "0.4.19"
pin-project = "1.1.2"
tokio = { version = "1.29.1", default-features = false, features = ["rt", "macros"] }
tokio-util = { version = "0.7.8", default-features = false }

[dev-dependencies]
anyhow = "1.0.71"
tokio = { version = "1.29.1", default-features = false, features = ["rt-multi-thread", "net", "macros", "time"] }
